fix popup content horizontal overflow

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ a {
 body, html {
     padding: 0;
     margin: 0;
-    height: 100%;
+    min-height: 100vh;
 }
 
 body {
@@ -127,7 +127,7 @@ div.tooltip-content p {
         flex-direction: column;
         align-items: center;
     }
-    
+
     div.list > div::before {
         content: attr(data-i);
         margin-bottom: 2px;
